#377: Adjusted SLC notebooks to new interface (#383)
fixes #377
---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -44,10 +44,10 @@
    "id": "1e70ffc8-b45e-40dc-85e5-ea3c986f7bbe",
    "metadata": {},
    "source": [
-    "### Instantiate SLCT Manager\n",
+    "### Instantiate ScriptLanguagesContainer\n",
     "\n",
-    "The \"Script-Languages-Container-Tools\" Manager (SLCT Manager) simplifies using the API of `exaslct`.\n",
-    "The following cell will therefore create an instance class `SlctManager` from the notebook-connector."
+    "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
+    "which enables using the`exaslct` in the AI Lab in a convenient way."
    ]
   },
   {
@@ -57,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.nb_connector import slct_manager\n",
-    "slctmanager = slct_manager.SlctManager(ai_lab_config)"
+    "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
+    "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"sample_slc\")"
    ]
   },
   {
@@ -94,9 +94,7 @@
    "id": "dd74b8e6-dfc8-44a4-a282-ebabb2d2c9a6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.export()"
-   ]
+   "source": "slc.export()"
   },
   {
    "cell_type": "markdown",
@@ -118,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_logs = list(slctmanager.working_path.output_path.glob('**/main.log'))\n",
+    "main_logs = list(slc.workspace.output_path.glob('**/main.log'))\n",
     "show_files(main_logs)"
    ]
   },
@@ -157,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_logs = list(slctmanager.working_path.output_path.glob('**/*.log'))\n",
+    "all_logs = list(slc.workspace.output_path.glob('**/*.log'))\n",
     "show_files(all_logs)"
    ]
   },
@@ -190,9 +188,7 @@
    "id": "29cd1109-aafe-47bf-9a70-db0bc3d76a9f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_directory_content(slctmanager.slc_dir.flavor_dir, 3)"
-   ]
+   "source": "show_directory_content(slc.flavor_path, 3)"
   },
   {
    "cell_type": "markdown",
@@ -219,9 +215,7 @@
    "id": "b3bfab04-008b-4577-84ab-01928e5b45aa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "show_directory_content(slctmanager.working_path.output_path / \"cache\" / \"exports\")"
-   ]
+   "source": "show_directory_content(slc.workspace.output_path / \"cache\" / \"exports\")"
   },
   {
    "cell_type": "markdown",
@@ -237,9 +231,7 @@
    "id": "925be491-48cf-47ab-a1ff-fec17785e46f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.slc_docker_images"
-   ]
+   "source": "slc.docker_image_tags"
   },
   {
    "cell_type": "markdown",
@@ -256,7 +248,7 @@
    "source": [
     "## Cleanup\n",
     "\n",
-    "This sections shows how you can use the `SLCT Manager` to clean up the artificats created by `exaslct`:\n",
+    "This sections shows how you can use the instance of `ScriptLanguageContainer` class to clean up the artifacts created by `exaslct`:\n",
     "- The docker images for the script-languages-container as well as the cache images\n",
     "- The exported containers (tar gz files)\n",
     "- The cached container files\n"
@@ -269,18 +261,17 @@
    "source": [
     "### Clean up the docker images\n",
     "\n",
-    "The following command cleans up the docker images:"
+    "The following command cleans up the docker images.\n",
+    "**Be aware that this command deletes all script-languages-container related docker images on the running host, even those created by other notebooks or users.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0f1e8489-f8d5-4192-a77d-207e8daca238",
    "metadata": {},
+   "source": "slc.clean_docker_images()",
    "outputs": [],
-   "source": [
-    "slctmanager.clean_all_images()"
-   ]
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -298,9 +289,7 @@
    "id": "2317494b-bea7-45ed-a4b8-530af218542a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.working_path.cleanup_export_path()"
-   ]
+   "source": "slc.workspace.cleanup_export_path()"
   },
   {
    "cell_type": "markdown",
@@ -318,9 +307,7 @@
    "id": "8a95e3ae-aef2-4ec3-88e0-d64ddb880a40",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "slctmanager.working_path.cleanup_output_path()"
-   ]
+   "source": "slc.workspace.cleanup_output_path()"
   }
  ],
  "metadata": {
