#387: Added AI-Lab example for customizing CUDA-enabled template SLC

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -292,6 +292,32 @@
     "        print(r)"
    ],
    "id": "53757c4e163bc774"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Materialize the news data in a table. This speeds up processing of the data in other notebooks.",
+   "id": "fe367cfb8f283940"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sql = \"\"\"\n",
+    "create table {schema_name!i}.news as select topics.name as topic, news.title as title, news.news_id as news_id, news.body as body\n",
+    "from\n",
+    "    {schema_name!i}_VS.NEWS as news,\n",
+    "    {schema_name!i}_VS.NEWS_TOPICS as topics\n",
+    "where news.NEWS_ID = topics.NEWS_NEWS_ID;\n",
+    "\"\"\"\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    res = conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema\n",
+    "    })"
+   ],
+   "id": "602326d92e9d4f53"
   }
  ],
  "metadata": {
