--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/start.ipynb
@@ -41,9 +41,9 @@
     "1. [Transformers extension](transformers/te_introduction.ipynb)\n",
     "1. [Cloud store](cloud/01_import_data.ipynb)\n",
     "1. [Script Languages Container](script_languages_container/using_the_script_languages_container_tool.ipynb)\n",
+    "1. [Using GPU in UDFs](gpu_in_udf/using_gpu_in_udf.ipynb)\n",
     "1. [Using IBIS dataframe library](ibis/quickstart.ipynb)\n",
-    "1. [Exasol Text AI](text_ai/txaie_introduction.ipynb)\n",
-    "\n"
+    "1. [Exasol Text AI](text_ai/txaie_introduction.ipynb)\n"
    ]
   }
  ],
