#397: Upgraded to notebook-connector 2.0.0

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -406,7 +406,7 @@
     "You can download your own models as follows:\n",
     "\n",
     "```python\n",
-    "from exasol.nb_connector.text_ai_extension_wrapper \n",
+    "from exasol.nb_connector.model_installation\n",
     "import install_model, TransformerModel\n",
     "\n",
     "install_model(conf,TransformerModel(\n",
