--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -146,11 +146,14 @@
     },
     "tags": [
      "running_model"
-    ]
+    ],
+    "SqlCellData": {
+     "variableName$1": "df_sql1"
+    }
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -201,11 +204,14 @@
     },
     "tags": [
      "running_model"
-    ]
+    ],
+    "SqlCellData": {
+     "variableName$1": "df_sql2"
+    }
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
