Use %%sql and added additional notes section

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -21,7 +21,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Open Secure Configuration Storage",
+   "source": "### Open Secure Configuration Storage",
    "id": "50a2988007bec846"
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Prerequisites\n",
+    "### Prerequisites\n",
     "- Run the [S3 VS tutorial](../cloud/02_s3_vs_reuters.ipynb) in order to populate our input data"
    ],
    "id": "73a7e60d9fe78077"
@@ -87,7 +87,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Prepare the models",
+   "source": "### Prepare the models",
    "id": "5f87d10ed6cf0835"
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Create the UDF\n",
+    "### Create the UDF\n",
     "\n",
     "Now create the UDF which implements a \"semantic join\" between pairs of text data (text1, text2) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (text1 and text2), computes the cosine similarity between their embeddings in a row-wise fashion, on the GPU. The UDF returns (emits) text1 and text2, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
    ],
@@ -241,11 +241,28 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Run the UDF on the new data\n",
+    "### Initialise JupySQL\n",
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using the Exasol SQLAlchemy driver."
+   ],
+   "id": "34c2b7fa6edb53b5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "%run ../utils/jupysql_init.ipynb",
+   "id": "21770aa932a9fb4b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Run the UDF on the new data\n",
     "\n",
     "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial: for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of TOPICs it is semantically closest to, in order. The result is exported to a pandas dataframe."
    ],
-   "id": "37d53389abc9416f"
+   "id": "68e6a6cadb020ea8"
   },
   {
    "metadata": {},
@@ -253,7 +270,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "sql_query = \"\"\"\n",
+    "%%sql\n",
     "SELECT *\n",
     "FROM (\n",
     "    SELECT\n",
@@ -266,22 +283,33 @@
     "        FROM (\n",
     "            SELECT distinct TOPIC, TITLE\n",
     "            FROM (\n",
-    "                SELECT distinct title as TITLE FROM {schema_name!i}.NEWS WHERE TITLE IS NOT NULL AND BODY IS NOT NULL\n",
+    "                SELECT distinct title as TITLE FROM NEWS WHERE TITLE IS NOT NULL AND BODY IS NOT NULL\n",
     "            )\n",
     "            CROSS JOIN (\n",
-    "                SELECT distinct topic AS TOPIC FROM {schema_name!i}.NEWS WHERE topic IS NOT NULL\n",
+    "                SELECT distinct topic AS TOPIC FROM NEWS WHERE topic IS NOT NULL\n",
     "            )\n",
     "        )\n",
     "    )\n",
     "    WHERE SIMILARITY_SCORE > 0.5 AND TEXT2='wheat'\n",
     ")\n",
     "WHERE r<=5\n",
-    "ORDER BY TITLE, r ASC\n",
-    "\"\"\"\n",
-    "res = conn.export_to_pandas(sql_query, query_params={\"schema_name\": ai_lab_config.db_schema})\n",
-    "res"
+    "ORDER BY TITLE, r ASC"
    ],
    "id": "a9886b4638692671"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Additional Notes\n",
+    "\n",
+    "Please note that executing queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously.  In the current Exasol version, it's the users responsibility to ensure that the libraries are configured appropriately or that only one query uses a GPU devices.\n",
+    "Here some links which might be helpful for the configuration:\n",
+    "- [Manage GPU Memory When Using TensorFlow and PyTorch](https://docs.ncsa.illinois.edu/systems/hal/en/latest/user-guide/prog-env/gpu-memory.html)\n",
+    "- [pytorch set per process memory fraction](https://docs.pytorch.org/docs/stable/generated/torch.cuda.memory.set_per_process_memory_fraction.html)\n",
+    "- [TensorFlow LogicalDeviceConfiguration](https://www.tensorflow.org/api_docs/python/tf/config/LogicalDeviceConfiguration)"
+   ],
+   "id": "2e1d00d1b4c3ea0f"
   }
  ],
  "metadata": {
