#399: Use model installation model from notebook-connector for transformer notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
@@ -92,7 +92,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3974d35d-b737-4fa9-b772-851ac2081cdd",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql1"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -123,7 +127,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7277caff-3036-4779-b5c0-c18e5377f286",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql2"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -146,10 +154,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ef993ba-af58-4a7c-b008-0e99b616dac7",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql3"
+    }
+   },
    "outputs": [],
    "source": [
-    "%%sql --save URGENT_TICKET_COUNT\n",
+    "%%sql\n",
     "SELECT 'Urgent' as URGENCY, SUM(IS_URGENT) AS CNT\n",
     "FROM TICKET_URGENCY\n",
     "UNION\n",
@@ -188,10 +200,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "de8886e2-2e27-47c3-ac01-2aa08307dd47",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql4"
+    }
+   },
    "outputs": [],
    "source": [
-    "%%sql products_with_ticket_count <<\n",
+    "%%sql\n",
     "SELECT E.ENTITY as PRODUCT, COUNT(DISTINCT D.TICKET_ID) as TICKET_COUNT\n",
     "FROM DOCUMENTS_AI_LAB_CUSTOMER_SUPPORT_TICKETS_VIEW_VIEW D\n",
     "JOIN NAMED_ENTITY_VIEW E ON \n",
@@ -242,7 +258,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4dfc4568-3af6-4ea1-81b9-209c02b8eb8c",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql5"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -265,7 +285,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e23cf56-0fd9-4b86-a976-1085a4b2c0de",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql6"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -294,7 +318,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c31aba70-377c-4bad-9229-492e6e1d07c9",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql7"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -311,7 +339,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6ac6c8b-bfc6-45d5-97d1-1cd54e230525",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql8"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -333,10 +365,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4b62f44-d166-43e9-a0a0-7bf7259549f1",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql9"
+    }
+   },
    "outputs": [],
    "source": [
-    "%%sql precent_of_urgent_tickets_per_product <<\n",
+    "%%sql\n",
     "SELECT PRODUCT, SUM(1-IS_URGENT)/COUNT(1)*100 as IS_NOT_URGENT, SUM(IS_URGENT)/COUNT(1)*100 as IS_URGENT\n",
     "FROM TICKET_URGENCY_FOR_PRODUCTS_UNDER_ATTENTION\n",
     "GROUP BY PRODUCT\n",
@@ -424,10 +460,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73a2cf97-0da9-4f9d-a648-f2f2526d16f2",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql10"
+    }
+   },
    "outputs": [],
    "source": [
-    "%%sql product_keywords_with_scores <<\n",
+    "%%sql\n",
     "SELECT\n",
     "    COO.ENTITY as PRODUCT,\n",
     "    COO.KEYWORD,\n",
