--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -224,7 +224,11 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "e4829de6-9e25-43c9-a939-6591c28487e8",
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql20"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1012,7 +1016,10 @@
    "execution_count": 78,
    "id": "2b5f8ea3-5a3f-4db1-8bfb-a6d2c361d378",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "SqlCellData": {
+     "variableName$1": "df_sql21"
+    }
    },
    "outputs": [],
    "source": [
