--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -66,50 +66,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6244f4ff-5054-486c-86ef-4f2389744ed9",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModelForQuestionAnswering\n",
+    "\n",
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'deepset/roberta-base-squad2'"
-   ]
+    "MODEL_NAME = 'deepset/roberta-base-squad2'\n",
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'question_answering', AutoModelForQuestionAnswering))"
+   ],
+   "id": "aebc949e60ff5ab"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "823b02ed-c50e-4908-a9de-7b358b449e8d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'question_answering')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3122d4bf-4942-4ee1-a73f-3f61ac46c4af",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## Use language model\n",
     "\n",
     "We are going to check the model output given the same question but two different contexts. In neither case the context has a direct answer to the question. We expect the answer to be relevant to the context."
-   ]
+   ],
+   "id": "29e0d88c4e9185d0"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "087ac7fa-945a-429a-87ed-b45de2c69259",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# This will be our question\n",
     "TEST_QUESTION = 'What bitumen is used for?'\n",
@@ -125,7 +110,8 @@
     "# Make sure our texts can be used in an SQL statement.\n",
     "TEST_QUESTION = TEST_QUESTION.replace(\"'\", \"''\")\n",
     "TEST_CONTEXT1 = TEST_CONTEXT1.replace(\"'\", \"''\")"
-   ]
+   ],
+   "id": "bafb631109c697fa"
   },
   {
    "cell_type": "markdown",
@@ -158,8 +144,8 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT1}}',\n",
@@ -216,8 +202,8 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT2}}',\n",
