--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -54,26 +54,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModel\n",
+    "\n",
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'facebook/opt-125m'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57029a52-064b-4fda-80bf-289cce50ffc4",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'text_generation')"
+    "MODEL_NAME = 'facebook/opt-125m'\n",
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'text_generation', AutoModel))"
    ]
   },
   {
@@ -154,8 +140,8 @@
     "sql = f\"\"\"\n",
     "SELECT {ai_lab_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{ai_lab_config.te_bfs_connection}',\n",
-    "    '{ai_lab_config.te_models_bfs_dir}',\n",
+    "    '{ai_lab_config.bfs_connection_name}',\n",
+    "    '{ai_lab_config.bfs_model_subdir}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
