--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -410,8 +410,8 @@
     "You can download your own models as follows:\n",
     "\n",
     "```python\n",
-    "from exasol.nb_connector.model_installation\n",
-    "import install_model, TransformerModel\n",
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModel\n",
     "\n",
     "install_model(conf,TransformerModel(\n",
     "    \"your keyword search model\", \n",
