Fixed sql cells

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -132,14 +132,11 @@
     },
     "tags": [
      "running_model"
-    ],
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
+    ]
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -190,14 +187,11 @@
     },
     "tags": [
      "running_model"
-    ],
-    "SqlCellData": {
-     "variableName$1": "df_sql2"
-    }
+    ]
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
