--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -137,14 +137,11 @@
     },
     "tags": [
      "running_model"
-    ],
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
+    ]
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
