Fixed cells in text ai notebooks

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
@@ -92,11 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3974d35d-b737-4fa9-b772-851ac2081cdd",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -127,11 +123,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7277caff-3036-4779-b5c0-c18e5377f286",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql2"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -154,14 +146,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ef993ba-af58-4a7c-b008-0e99b616dac7",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql3"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save URGENT_TICKET_COUNT\n",
     "SELECT 'Urgent' as URGENCY, SUM(IS_URGENT) AS CNT\n",
     "FROM TICKET_URGENCY\n",
     "UNION\n",
@@ -200,14 +188,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "de8886e2-2e27-47c3-ac01-2aa08307dd47",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql4"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql products_with_ticket_count <<\n",
     "SELECT E.ENTITY as PRODUCT, COUNT(DISTINCT D.TICKET_ID) as TICKET_COUNT\n",
     "FROM DOCUMENTS_AI_LAB_CUSTOMER_SUPPORT_TICKETS_VIEW_VIEW D\n",
     "JOIN NAMED_ENTITY_VIEW E ON \n",
@@ -258,11 +242,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4dfc4568-3af6-4ea1-81b9-209c02b8eb8c",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql5"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -285,11 +265,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e23cf56-0fd9-4b86-a976-1085a4b2c0de",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql6"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -318,11 +294,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c31aba70-377c-4bad-9229-492e6e1d07c9",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql7"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -339,11 +311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6ac6c8b-bfc6-45d5-97d1-1cd54e230525",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql8"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -365,14 +333,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4b62f44-d166-43e9-a0a0-7bf7259549f1",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql9"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql precent_of_urgent_tickets_per_product <<\n",
     "SELECT PRODUCT, SUM(1-IS_URGENT)/COUNT(1)*100 as IS_NOT_URGENT, SUM(IS_URGENT)/COUNT(1)*100 as IS_URGENT\n",
     "FROM TICKET_URGENCY_FOR_PRODUCTS_UNDER_ATTENTION\n",
     "GROUP BY PRODUCT\n",
@@ -460,14 +424,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73a2cf97-0da9-4f9d-a648-f2f2526d16f2",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql10"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql product_keywords_with_scores <<\n",
     "SELECT\n",
     "    COO.ENTITY as PRODUCT,\n",
     "    COO.KEYWORD,\n",
