Fixed imports in txaie_preprocssing

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -407,7 +407,7 @@
     "\n",
     "```python\n",
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
-    "from transformers import AutoModel\n",
+    "from transformers import AutoModel, AutoModelForTokenClassification, AutoModelForSequenceClassification\n",
     "\n",
     "install_model(conf,TransformerModel(\n",
     "    \"your keyword search model\", \n",
