Apply suggestions from code review
Co-authored-by: Mikhail Beck <mikhail.beck@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -73,11 +73,11 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
-    "from transformers import AutoModel\n",
+    "from transformers import AutoModelForMaskedLM\n",
     "\n",
     "# This is the name of the model at the Huggingface Hub\n",
     "MODEL_NAME = 'StanfordAIMI/RadBERT'\n",
-    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'filling_mask', AutoModel))"
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'filling_mask', AutoModelForMaskedLM))"
    ]
   },
   {
