--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -55,11 +55,11 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
-    "from transformers import AutoModel\n",
+    "from transformers import AutoModelForCausalLM\n",
     "\n",
     "# This is the name of the model at the Huggingface Hub\n",
     "MODEL_NAME = 'facebook/opt-125m'\n",
-    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'text_generation', AutoModel))"
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'text_generation', AutoModelForCausalLM))"
    ]
   },
   {
