--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -74,10 +74,10 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
-    "from transformers import AutoModel\n",
+    "from transformers import AutoModelForSeq2SeqLM\n",
     "# This is the name of the model at the Huggingface Hub\n",
     "MODEL_NAME = 'facebook/wmt19-en-de'\n",
-    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModel))"
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModelForSeq2SeqLM))"
    ]
   },
   {
