#397/#399: Use model installation model from notebook-connector for transformer notebooks and upgraded to notebook-connector 2.0.0 (#400)
fixes #397: Upgraded to notebook-connector 2.0.0

fixes #399: Use model installation model from notebook-connector for transformer notebooks

---------

Co-authored-by: Mikhail Beck <mikhail.beck@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -406,8 +406,8 @@
     "You can download your own models as follows:\n",
     "\n",
     "```python\n",
-    "from exasol.nb_connector.text_ai_extension_wrapper \n",
-    "import install_model, TransformerModel\n",
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModel, AutoModelForTokenClassification, AutoModelForSequenceClassification\n",
     "\n",
     "install_model(conf,TransformerModel(\n",
     "    \"your keyword search model\", \n",
