--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -72,26 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModelForSequenceClassification\n",
+    "\n",
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'cross-encoder/nli-deberta-base'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1d74058-92c2-48ae-b745-5651e32a419a",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'zero_shot_classification')"
+    "MODEL_NAME = 'cross-encoder/nli-deberta-base'\n",
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'zero_shot_classification', AutoModelForSequenceClassification))"
    ]
   },
   {
@@ -160,8 +146,8 @@
     "(\n",
     "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        '{{MY_LABELS}}'\n",
