--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -72,26 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModelForMaskedLM\n",
+    "\n",
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'StanfordAIMI/RadBERT'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4ca7457-501f-4c8e-a5c4-85d9e05670f2",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'filling_mask')"
+    "MODEL_NAME = 'StanfordAIMI/RadBERT'\n",
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'filling_mask', AutoModelForMaskedLM))"
    ]
   },
   {
@@ -146,8 +132,8 @@
     "(\n",
     "    SELECT TE_FILLING_MASK_UDF(\n",
     "        NULL,\n",
-    "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        5\n",
