--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -73,26 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
+    "from transformers import AutoModelForSeq2SeqLM\n",
     "# This is the name of the model at the Huggingface Hub\n",
-    "MODEL_NAME = 'facebook/wmt19-en-de'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50a8cc23-bba5-4497-8947-9adc8c83a76c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(ai_lab_config, MODEL_NAME, 'translation')"
+    "MODEL_NAME = 'facebook/wmt19-en-de'\n",
+    "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModelForSeq2SeqLM))"
    ]
   },
   {
@@ -151,8 +136,8 @@
     "(\n",
     "    SELECT TE_TRANSLATION_UDF(\n",
     "        NULL,\n",
-    "        '{{ai_lab_config.te_bfs_connection}}',\n",
-    "        '{{ai_lab_config.te_models_bfs_dir}}',\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        '{{SOURCE_LANGUAGE}}',\n",
