--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -265,7 +265,11 @@
    "id": "68e6a6cadb020ea8"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "SqlCellData": {
+     "variableName$1": "df_sql1"
+    }
+   },
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -303,11 +307,14 @@
    "source": [
     "### Additional Notes\n",
     "\n",
-    "Please note that executing queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously.  In the current Exasol version, it's the users responsibility to ensure that the libraries are configured appropriately or that only one query uses a GPU devices.\n",
+    "#### Parallel execution\n",
+    "Please note that executing queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously. In the current Exasol version, it's the users responsibility to ensure that the libraries are configured appropriately or that only one query uses a GPU devices.\n",
     "Here some links which might be helpful for the configuration:\n",
     "- [Manage GPU Memory When Using TensorFlow and PyTorch](https://docs.ncsa.illinois.edu/systems/hal/en/latest/user-guide/prog-env/gpu-memory.html)\n",
     "- [pytorch set per process memory fraction](https://docs.pytorch.org/docs/stable/generated/torch.cuda.memory.set_per_process_memory_fraction.html)\n",
-    "- [TensorFlow LogicalDeviceConfiguration](https://www.tensorflow.org/api_docs/python/tf/config/LogicalDeviceConfiguration)"
+    "- [TensorFlow LogicalDeviceConfiguration](https://www.tensorflow.org/api_docs/python/tf/config/LogicalDeviceConfiguration)\n",
+    "\n",
+    "Additionally, it is possible to control the number of parallel UDF instances by setting the  [UDF Instance Limiting](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/udf_instance_limit.htm).\n"
    ],
    "id": "2e1d00d1b4c3ea0f"
   }
