--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/using_gpu_in_udf.ipynb
@@ -10,7 +10,9 @@
     "This tutorial shows step-by-step how to build a CUDA enabled Script Language Container with the appropriate ML libraries and how to create UDF's with GPU support.\n",
     "For a detailed explanation about how to build a custom Script Language Container, please read the tutorial [Script Languages Container](../script_languages_container/using_the_script_languages_container_tool.ipynb)\n",
     "\n",
-    "**Note: This tutorial currently does not support a SaaS backend.**"
+    "**Notes:**\n",
+    "- **This tutorial currently does not support a SaaS backend.**\n",
+    "- **This tutorial was written to work with Exasol DB 2025.01.x. Newer versions of Exasol potentially will not work correctly.**"
    ]
   },
   {
