--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "### Run the UDF on the new data\n",
     "\n",
-    "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial: for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of TOPICs it is semantically closest to, in order. The result is exported to a pandas dataframe."
+    "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial: for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of TOPICs it is semantically closest to, in order."
    ],
    "id": "68e6a6cadb020ea8"
   },
@@ -294,7 +294,7 @@
     "            )\n",
     "        )\n",
     "    )\n",
-    "    WHERE SIMILARITY_SCORE > 0.5 AND TEXT2='wheat'\n",
+    "    WHERE SIMILARITY_SCORE > 0.5\n",
     ")\n",
     "WHERE r<=5\n",
     "ORDER BY TITLE, r ASC"
