Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -306,11 +306,11 @@
    "execution_count": null,
    "source": [
     "sql = \"\"\"\n",
-    "create table {schema_name!i}.news as select topics.name as topic, news.title as title, news.news_id as news_id, news.body as body\n",
-    "from\n",
-    "    {schema_name!i}_VS.NEWS as news,\n",
-    "    {schema_name!i}_VS.NEWS_TOPICS as topics\n",
-    "where news.NEWS_ID = topics.NEWS_NEWS_ID;\n",
+    "CREATE TABLE {schema_name!i}.NEWS as select T.NAME as TOPIC, N.TITLE as TITLE, N.NEWS_ID as NEWS_ID, N.BODY as BODY\n",
+    "FROM\n",
+    "    {schema_name!i}_VS.NEWS as N,\n",
+    "    {schema_name!i}_VS.NEWS_TOPICS as T\n",
+    "WHERE news.NEWS_ID = topics.NEWS_NEWS_ID;\n",
     "\"\"\"\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    res = conn.execute(sql, query_params={\n",
